Fixing padding on footer so it doesn't break the box model

--- a/css/step1.css
+++ b/css/step1.css
@@ -82,7 +82,7 @@ dt {
   background-color: #7b96bc;
   color: #f9f3e9;
   text-align: center;
-  padding: .5em;
+  padding: .5em 0;
   font-style: italic;
 }
 
